Added projects and images to the page

--- a/index.html
+++ b/index.html
@@ -14,28 +14,24 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<h1><strong>I am Joseph Colago</strong><br />
+					Welcome to my portfolio page
+				<br /></h1>
+			</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
 
 				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
-						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+				<section id="one">
+					<header class="major">
+						<h2>About</h2>
+					</header>
+					<p>Full stack web developer and all around nerd. I enjoy video games, Dungeons and Dragons, and fishing with my parents.</p>
 					</section>
 
 				<!-- Two -->
@@ -43,26 +39,26 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/soloproject.png" class="image fit thumb"><img src="images/thumbs/soloproject.png" alt="" /></a>
+								<h3><a href="https://github.com/jcolago/solo-project">D&D Dungeon Master Companion App</a></h3>
+								<p>My solo project for EDA. A place where player characters and monsters can be stored and tracked for Dungeons and Dragons</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/feedbackloop.png" class="image fit thumb"><img src="images/thumbs/feedbackloop.png" alt="" /></a>
+								<h3><a href="https://github.com/jcolago/redux-feedback-loop">Feedback Loop</a></h3>
+								<p>Weekend project for EDA. The user can submit a multi-view form that is then displayed in an admin section.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/movielist.png" class="image fit thumb"><img src="images/thumbs/movielist.png" alt="" /></a>
+								<h3><a href="https://github.com/jcolago/weekend-movie-sagas">Movie Gallery</a></h3>
+								<p>Weekend project for EDA. Displays a list of movies on the home page. Each move has a details section that can be viewed by clicking on the movie poster image</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							</article> -->
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -75,13 +71,13 @@
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>Feel free to get in contact with me. You can shoot me an email or find me on LinkedIn and Github.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
