Added links to mail form and picture

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>I am Joseph Colago</strong><br />
-					Welcome to my portfolio page
+				<a href="https://www.linkedin.com/in/jcolago/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<h1><strong>Joseph Colago</strong><br />
+					Full-stack developer
 				<br /></h1>
 			</div>
 		</header>
@@ -31,7 +31,7 @@
 					<header class="major">
 						<h2>About</h2>
 					</header>
-					<p>Full stack web developer and all around nerd. I enjoy video games, Dungeons and Dragons, and fishing with my parents.</p>
+					<p>Full stack web developer and all around nerd. I enjoy video games, Dungeons and Dragons, and fishing with my family.</p>
 					</section>
 
 				<!-- Two -->
@@ -67,29 +67,32 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
+						<br />
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul> -->
+							<li><a href="https://github.com/jcolago" class="button">GitHub Page</a></li>
+						</ul> 
 					</section>
 
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Feel free to get in contact with me. You can shoot me an email or find me on LinkedIn and Github.</p>
+						<p>Feel free to get in contact with me. You can shoot me an email or connect with me on LinkedIn and Github.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="#">
+								<form method="post" action="mailto: jcolago2005@gmail.com" enctype="text/plain">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
 										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 									</div>
+									<br />
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" /></li>
+									</ul>
 								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
+								
 							</div>
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
@@ -100,7 +103,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">jcolago2005@gmail.com</a>
+										<a href="mailto: jcolago2005@gmail.com">jcolago2005@gmail.com</a>
 									</li>
 								</ul>
 							</div>
