Added one more project to the page

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 								<h3><a href="https://github.com/jcolago/weekend-movie-sagas">Movie Gallery</a></h3>
 								<p>Weekend project for EDA. Displays a list of movies on the home page. Each move has a details section that can be viewed by clicking on the movie poster image</p>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article> -->
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/PetsTableUpdated.png" class="image fit thumb"><img src="images/thumbs/PetsTableUpdated.png" alt="" /></a>
+								<h3><a href="https://github.com/jcolago/dotnet-pet-hotel">C# Pet Hotel</a></h3>
+								<p>Group project for C# week. Front end was built for us but we did the back end routing and styling.</p>
+							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
