Edited my about section and made the picture a little bit bigger

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 					<header class="major">
 						<h2>About</h2>
 					</header>
-					<p>Full stack web developer and all around nerd. I enjoy video games, Dungeons and Dragons, and fishing with my family.</p>
+					<p>Former Team Lead - Fargo Customer Support at Digi-Key, I am currently enrolled at Emerging Digital Academy, a 20 week full time full stack development bootcamp in Fargo, ND after a career as a dedicated leader and trainer with a passion for quality control and extensive experience in inventory management and diverse, cross-functional team leadership. </p>
+					
+					<p>I have been drawn to problem solving and puzzles since I was young and software development l allows me to keep developing those skills and express my creative side. </p>
+					
+					<p>In my free time, I love exploring new video games or creating sessions for Dungeons and Dragons. I also enjoy a great day with my family out on lake.</p>
 					</section>
 
 				<!-- Two -->
