Changed feedback loop project link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/feedbackloop.png" class="image fit thumb"><img src="images/thumbs/feedbackloop.png" alt="" /></a>
-								<h3><a href="https://github.com/jcolago/redux-feedback-loop">Feedback Loop</a></h3>
+								<h3><a href=https://github.com/jcolago/redux-feedback-loop>Feedback Loop</a></h3>
 								<p>Weekend project for EDA. The user can submit a multi-view form that is then displayed in an admin section.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
