updated about section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<header class="major">
 						<h2>About</h2>
 					</header>
-					<p>Former Team Lead - Fargo Customer Support at Digi-Key, I am currently enrolled at Emerging Digital Academy, a 20 week full time full stack development bootcamp in Fargo, ND after a career as a dedicated leader and trainer with a passion for quality control and extensive experience in inventory management and diverse, cross-functional team leadership. </p>
+					<p>Former Team Lead - Fargo Customer Support at Digi-Key, I have graduated from Emerging Digital Academy, a 20 week full time full stack development bootcamp in Fargo, ND after a career as a dedicated leader and trainer with a passion for quality control and extensive experience in inventory management and diverse, cross-functional team leadership. </p>
 					
 					<p>I have been drawn to problem solving and puzzles since I was young and software development l allows me to keep developing those skills and express my creative side. </p>
 					
